extend header banner to body width, fixing background overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -297,19 +297,23 @@ footer#footer {
 
 .header-content {
     position: relative;
-    display: inline-block;
+    display: block;
+    width: 100%;
 }
-  
+
 .header-content:before {
     content: '';
     position: absolute;
     top: 0%;
-    left: -5%;
-    width: 110%;
+    width: 100%;
     height: 100%;
     background-color: #E0F2FD;
     transform: skewX(-15deg);
     z-index: -1;
+}
+
+.header-inner {
+    padding-left: 20px; /* Adjust this value as per your preference */
 }
   
 .landing-page-content {
